# RulesIngestion

./: .gitignore  README.md  pyproject.toml
Archive/Mark I/: .gitignore  README.md  __init__.py  config_generator.py  config_profile.py  config_store.py  diagnostics_store.py  enrichment_planner.py  full_metrics.json  ingest.py  ingestion_service.py  llm_config_generator.py  llm_enrichment.py  main.py  merge_enriched_outputs.py  metrics_review.py  pipeline_outputs.py  pipeline_runs.py  pyproject.toml  rules_ingestion_pipeline.py  run_anchor_term_experiments.py  run_first_experiments.py  run_full_galaxyguide.sh  run_gmcore_ingest_and_eval.sh  run_ingest_and_evaluate_source.sh  scope_baseline_metrics.json  scope_variant_v1_metrics.json  scope_variant_v2_metrics.json  scope_variant_v3_metrics.json  scope_variant_v4_metrics.json
Archive/Mark I/Handoffs/: HANDOFF-GMCore-EndToEnd-Eval.md  HANDOFF-Graph-Retrieval-Enhancement.md  HANDOFF-Hybrid-Retrieval-Scoring-Improvements.md  HANDOFF-Marker-Evaluation.md  HANDOFF-Missing-Gold-Chunks-Investigation.md  HANDOFF-Ranking-Degradation-Debug.md  HANDOFF-Rules-Ingestion-Enrichment-Next.md  HANDOFF-RulesIngestion-Config-Generation-Improve.md  traversal_alignment_handoff.md
Archive/Mark I/enrichment/: __init__.py  chunks.py  clause_units.py  coalescer.py  extractors.py  fact_relations.py  graph_builder.py  mention_type_inference.py  mentions.py  rule_facts.py  spell_merger.py  vocabulary_loader.py
Archive/Mark I/evaluation/: __init__.py  chapter_routing.py  data_loading.py  graph_ops.py  llm_summarization.py  metrics.py  model_registry.py  reporting.py  scoring_engine.py
Archive/Mark I/scripts/: analyze_gate_failures.py  bind_benchmark_queries.py  convert_blind_eval_to_harness_queries.py  discover_deterministic_edges.py  discover_deterministic_edges_candidates.py  discover_deterministic_edges_constants.py  discover_deterministic_edges_gates.py  discover_deterministic_edges_indexing.py  discover_deterministic_edges_summary.py  discover_deterministic_edges_text.py  edge_restricted_retrieval_eval.py  list_graph_edges.py  missing_gold_analysis.py  ranking_degradation_analysis.py  rebuild_graphs_from_enriched.py  run_entity_coverage_metrics.py
Archive/Mark I/tests/: test_blind_eval.py  test_chunk_coalescer.py  test_clause_units.py  test_config_generator.py  test_config_profile.py  test_diagnostics_store.py  test_discover_deterministic_edges.py  test_enrichment_planner.py  test_entity_only_traversal.py  test_evaluation_integration.py  test_evaluation_modules.py  test_fact_relations.py  test_graph_builder_determinism.py  test_llm_config_generator.py  test_llm_enrichment.py  test_mechanic_frame_relations.py  test_mention_type_inference.py  test_mentions.py  test_rule_facts.py  test_rules_ingestion_pipeline.py  test_traversal.py
Archive/Mark I/tmp_eval_getem/: benchmark_retrieval_candidates.json  benchmark_retrieval_candidates_v2.json  merged.evaluation_queries.json
Archive/Mark I/traversal/: __init__.py  (+13 more)
(+775 files in other folders)
