[project]
name = "rulesingestion"
version = "0.1.0"
description = "Deterministic rulebook extraction and retrieval pipeline"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "addict>=2.4.0",
    "blake3>=0.3.3",
    "openai>=1.0.0",
    "pydantic>=2.0.0",
    "marker-pdf>=1.10.1",
    "matplotlib>=3.10.8",
    "opencv-python>=4.13.0.90",
    "pymupdf>=1.26.7",
    "pytest>=9.0.2",
    "torchvision>=0.25.0",
]

[project.optional-dependencies]
deepseek-ocr2 = [
    "easydict>=1.11",
    "pymupdf>=1.24.0",
]
retrieval-lab = [
    "numpy>=2.0.0",
    "pyyaml>=6.0",
    "pymongo>=4.0",
    "rank-bm25>=0.2.2",
    "sentence-transformers>=3.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.uv]
dev-dependencies = [
    "pytest>=9.0.2",
]
