[project]
name = "rulesingestion"
version = "0.1.0"
description = "Deterministic rulebook extraction and retrieval pipeline"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "addict>=2.4.0",
    "blake3>=0.3.3",
    "openai>=1.0.0",
    "pydantic>=2.0.0",
    "matplotlib>=3.10.8",
    "opencv-python>=4.13.0.90",
    "pymupdf>=1.26.7",
    "pytest>=9.0.2",
]

[project.optional-dependencies]
deepseek-ocr2 = [
    "easydict>=1.13",
    "transformers>=4.46.0",
    "tokenizers>=0.19.0",
    "pymupdf>=1.26.7",
    "pytest>=9.0.2",
    "torch>=2.0.0",
    "torchvision>=0.25.0",
    "img2pdf>=0.6.3",
    "einops>=0.8.2",
    "pillow>=10.4.0",
    "numpy>=2.4.1",
]
retrieval-lab = [
    "numpy>=2.0.0",
    "pyyaml>=6.0",
    "pymongo>=4.0",
    "rank-bm25>=0.2.2",
    "sentence-transformers>=3.0",
    "peft>=0.13.0",
    "transformers>=4.51.0",
    "einops>=0.7.0",
    "python-dotenv>=1.0.0",
]
tinker = [
    "ollama>=0.4.0",
    "FlagEmbedding>=1.3.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

