[project]
name = "rulesingestion"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.128.0",
    "marker-pdf>=1.10.1",
    "openai>=1.109.1",
    "pymongo>=4.16.0",
    "pytest>=9.0.2",
    "uvicorn>=0.40.0",
    "transformers>=4.57.6",
    "sentence-transformers>=5.2.1",
]

